unpackaged/main/default/objects/cmbls__Repayment_Schedule__c/cmbls__Repayment_Schedule__c.object-meta.xml
<CustomObject>
    <label>Repayment Schedule</label>
    <nameField>
        <displayFormat>RS-{000000}</displayFormat>
        <label>Repayment Schedule</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Repayment Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>