unpackaged/main/default/objects/cmbls__Repayment_Schedule__c/fields/cmbls__Active__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>