unpackaged/main/default/objects/cmbls__Repayment_Schedule__c/fields/cmbls__Bank_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Bank_Account_Number__c</fullName>
    <label>Bank Account Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>