unpackaged/main/default/objects/cmbls__Repayment_Schedule__c/fields/cmbls__Default__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Default__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>