unpackaged/main/default/objects/cmbls__Repayment_Schedule__c/fields/cmbls__End_Date__c.field-meta.xml
<CustomField>
    <fullName>cmbls__End_Date__c</fullName>
    <inlineHelpText>This will be the final payment pulled. If populated, the system will no longer schedule payments for an Effective Date that is after this date. Note: An End Date is not required. If null, the system will continue to create payments until there is no longer a balance.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>