unpackaged/main/default/objects/cmbls__Repayment_Schedule__c/fields/cmbls__Final_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Final_Payment_Date__c</fullName>
    <label>Final Payment Date</label>
    <type>Date</type>
</CustomField>