unpackaged/main/default/objects/cmbls__Repayment_Schedule__c/fields/cmbls__Installment_Amount__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Installment_Amount__c</fullName>
    <inlineHelpText>Note: If the remaining balance is less than the scheduled payment, the system will create a payment for the lesser amount</inlineHelpText>
    <label>Transaction Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>