unpackaged/main/default/objects/cmbls__Repayment_Schedule__c/fields/cmbls__Next_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Next_Payment_Date__c</fullName>
    <inlineHelpText>This is the Effective Date of the next ACH payment that will be created by the Repayment Schedule. This field is populated and updated by the system based on the current values in the Repayment Schedule. Note: This will always roll forward to the next valid business day if it falls on a holiday or weekend.</inlineHelpText>
    <label>Next Payment Date</label>
    <type>Date</type>
</CustomField>