unpackaged/main/default/objects/cmbls__Repayment_Schedule__c/fields/cmbls__Next_Payment_Notes__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Next_Payment_Notes__c</fullName>
    <label>Next Payment Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>