unpackaged/main/default/objects/cmbls__Repayment_Schedule__c/fields/cmbls__Notes__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Notes__c</fullName>
    <label>Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>