unpackaged/main/default/objects/cmbls__Repayment_Schedule__c/fields/cmbls__Original_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Original_Scheduled_Date__c</fullName>
    <label>Original Scheduled Date</label>
    <type>Date</type>
</CustomField>