unpackaged/main/default/objects/cmbls__Repayment_Schedule__c/fields/cmbls__Payment_Amount_Method__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Payment_Amount_Method__c</fullName>
    <inlineHelpText>Loans in Recovery - Use "Remaining Settlement Balance", otherwise use "Fixed Amount"</inlineHelpText>
    <label>Payment Amount Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed Amount</fullName>
                <default>true</default>
                <label>Fixed Amount</label>
            </value>
            <value>
                <fullName>Active Invoice Balance</fullName>
            </value>
            <value>
                <fullName>Remaining Settlement Balance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>