unpackaged/main/default/objects/cmbls__Repayment_Schedule__c/fields/cmbls__Preset__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Preset__c</fullName>
    <inlineHelpText>Payment frequency</inlineHelpText>
    <label>Preset</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Bi-Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Pause</fullName>
            </value>
            <value>
                <fullName>Daily</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>