unpackaged/main/default/objects/cmbls__Repayment_Schedule__c/fields/cmbls__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Start_Date__c</fullName>
    <inlineHelpText>This is the first date the system will start evaluating this Repayment Schedule to begin creating ACH payments. NOTE: This must be at least one day before the Next Payment Date and should also be a business day</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>