unpackaged/main/default/objects/cmbls__Repayment_Schedule__c/fields/Repayment_Day_of_Week__c.field-meta.xml
<CustomField>
    <fullName>Repayment_Day_of_Week__c</fullName>
    <description>Day of the Week referencing Days field (PD-2295)</description>
    <formula>IF(
INCLUDES( cmbls__Days__c ,"Monday"),1,
 IF(INCLUDES( cmbls__Days__c ,"Tuesday"),2,
   IF(INCLUDES( cmbls__Days__c ,"Wednesday"),3,
      IF(INCLUDES( cmbls__Days__c ,"Thursday"),4,
        IF(INCLUDES( cmbls__Days__c ,"Friday"),5, NULL
)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Day of the Week referencing Days field</inlineHelpText>
    <label>Repayment Day of Week</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>