unpackaged/main/default/objects/cmbls__Repayment_Schedule__c/validationRules/Start_Date_and_Next_Payment_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_and_Next_Payment_Date</fullName>
    <active>true</active>
    <description>Prevent users from setting ‘Start Date’ to be the same as ‘Next Payment Date’ as the Repayment Schedule will not create payments when this occurs.</description>
    <errorConditionFormula>cmbls__Start_Date__c  &gt;=  cmbls__Next_Payment_Date__c</errorConditionFormula>
    <errorDisplayField>cmbls__Start_Date__c</errorDisplayField>
    <errorMessage>Start Date cannot be the same date as Next Payment Date. Start Date should be at least 1 business day prior to the desired Next Payment Date. If you leave Next Payment Date blank, the system will populate it to the earliest date available upon save</errorMessage>
</ValidationRule>